--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-baseURL: "https://pascalmichaillat.org/hugo-website/" 
-title: Moritz-Maria von Igelfeld
+baseURL: "https://srivastava-prachi.github.io/" 
+title: Prachi Srivastava
 theme: PaperMod
 
 enableInlineShortcodes: true
