--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://srivastava-prachi.github.io/" 
+baseURL: "https://pascalmichaillat.org/hugo-website" 
 title: Prachi Srivastava
 theme: PaperMod
 
