--- a/config.yml
+++ b/config.yml
@@ -39,7 +39,7 @@ params:
     enabled: true
     title: "Prachi Srivastava"
     subtitle: |
-      Hi! I am currently an Economist at the [Central Bank of Ireland](https://www.centralbank.ie/). I hold a Ph.D. in Economics from the [University College Dublin](https://www.ucd.ie/economics/).
+      Hi! I am currently an Economist at the **[Central Bank of Ireland](https://www.centralbank.ie/)**. I hold a Ph.D. in Economics from the **[University College Dublin](https://www.ucd.ie/economics/)**.
 
       I work on topics in macroeconomics—especially expectations, uncertainty, and labor.
 
