--- a/config.yml
+++ b/config.yml
@@ -39,10 +39,8 @@ params:
     enabled: true
     title: "Prachi Srivastava"
     subtitle: |
-      Hi! I am currently an Economist at the **[Central Bank of Ireland](https://www.centralbank.ie/)**. I hold a Ph.D. in Economics from the **[University College Dublin](https://www.ucd.ie/economics/)**.
-
-      I work on topics in macroeconomics—especially expectations, uncertainty, and labor.
-
+     Hi! I am currently an Economist at the <a href="https://www.centralbank.ie/" target="_blank"><b>Central Bank of Ireland</b></a>. I hold a Ph.D. in Economics from the <a href="https://www.ucd.ie/economics/" target="_blank"><b>University College Dublin</b></a>.
+     I work on topics in macroeconomics, especially expectations, uncertainty, and labor.
     imageUrl: "prachi_picture.png"
     imageWidth: 200
     imageHeight: 200
